# echoes

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .env.production  .flake8  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .trufflehog.yml  06042026_summary.md  42CRUNCH_COMPLETE_GUIDE.md  42CRUNCH_FIXES_GUIDE.md  42crunch-setup.ps1  ACKNOWLEDGEMENTS.md  AGENTIC_ASSISTANT_COMPLETE.md  AGENTIC_ASSISTANT_STREAMLINED.md  AGENTIC_CAPABILITIES_ENABLED.md  AGENTIC_CAPABILITIES_SUMMARY.md  AGENTS.md  AGENT_INTEGRATION_GUIDE.md  AGENT_TASKS.md  ANALYSIS_RECOMMENDATIONS.md  AQ.md  ASSISTANT_INTEGRATION_COMPLETE.md  ASSISTANT_INTEGRATION_GUIDE.md  ATLAS_DIRECT_INTERACTION_ENABLED.md  ATLAS_ISSUES_FIXED.md  AUTHENTIC_E2E_ESTABLISHED.md  AUTOMATION_ANALYSIS.md  BUSINESS_DEMO_PRESENTATION.md  CHANGELOG.md  CI_PRECOMMIT_FIX_SUMMARY.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_SECURITY_AUDIT_FINAL.md  (+234 more)
.github/: CODEOWNERS  agent-fix-prompt.md  ci_reliability_contract.yaml  copilot-instructions.md  copilot-review-instructions.md  dependabot.yml
.run/: PyTests (sanitized).run.xml
.sessions/: 42a58799-d009-47aa-b56d-55fc5f9ea6b8.json  850d0dd5-f6bf-4909-b546-845e3119e996.json  8c7ac2ce-e8ea-41ec-ada9-2e214c4a5dd0.json
ATLAS/: README.md  __init__.py  api.py  models.py
OPERATION ECHOES COMPLETE VICTORY PROTOCOL/: Unconfirmed 516302.crdownload  Unconfirmed 876486.crdownload  core_completion_roadmap.md  monitoring_dashboard.html  phase2_launch.sh  production_deployment.sh  pytest_config.txt
Q4/: README.md  SYSTEM_VALIDATION_REPORT.md  coverage.json  dashboard.py  data_analytics_comprehension_pipeline.py  db_manager.py  drucker_management.py  export_roadmap.py  models.py  openapi.json  pytest.ini  requirements.txt  roadmap_export_updated.xlsx  sample_roadmap.csv  test_pipeline.py
SCIENCE/: README.md
ai_agents/: orchestrator.py
ai_modules/: assistant_integration.py
api/: __init__.py  __init__.py.contaminated.backup  config.py  dependencies.py  logging_structured.py  main.py  middleware.py  middleware.py.disabled  pattern_detection.py  self_rag.py  unified_gateway.py
app/: __init__.py  main.py  main_production.py  model_router.py  orchestral_model_router.py  values.py
archive/: atlas.txt  summon_atlas.txt
audit_results/: COMPREHENSIVE_AUDIT_EXECUTIVE_SUMMARY.md  DEPENDENCY_RESOLUTION_PLAN.md  FINAL_COMPREHENSIVE_AUDIT_REPORT.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  IMPLEMENTATION_STATUS.md  PHASE_10_COMPLIANCE_REPORT.md  PHASE_1_ARCHITECTURE_REPORT.md  PHASE_2_SECURITY_REPORT.md  PHASE_3_TESTING_REPORT.md  PHASE_4_DOCUMENTATION_REPORT.md  PHASE_5_DEPENDENCY_REPORT.md  PHASE_6_CONFIGURATION_REPORT.md  PHASE_7_PERFORMANCE_REPORT.md  PHASE_8_PRODUCTION_REPORT.md  PHASE_9_ORGANIZATION_REPORT.md  phase-2-echo-audit-report.md
audit_tools/: architecture_audit.py  dependency_audit.py  documentation_audit.py  resolve_dependencies.py  security_audit.py  testing_audit.py
automation/: __init__.py  check_test_coverage.py  security_monitor.py  test_generator.py
backend/: pytest.ini
c_o_r_e/: __init__.py  __main__.py  youtube_transcriber.py
caching/: prompt_engine.py
claude/: IDE Agent Task Prompt Template.md  agent_prompt_template.md  automation_blueprint.md  automation_operational_playbook.md  convo.txt  echoes_ide_prompt.md  mcp_config.json  windsurf_mcp_setup.md
cli/: examples.ps1  examples.sh  main.py
components/: GameBoard.tsx
config/: .env.example  OPT.data.json  OPT.meta.json  PTR.data.json  PTR.meta.json  SMIMEA.data.json  SMIMEA.meta.json  SOA.data.json  SOA.meta.json  ZONEMD.data.json  ZONEMD.meta.json  __about__.data.json  __about__.meta.json  __config__.data.json  __config__.meta.json  __future__.data.json  __future__.meta.json  __init__.data.json  __init__.meta.json  __main__.data.json  __main__.meta.json  __version__.data.json  __version__.meta.json  _abc.data.json  _abc.meta.json  _abnf.data.json  _abnf.meta.json  _add_docstring.data.json  _add_docstring.meta.json  _api.data.json  _api.meta.json  _array_api_info.data.json  _array_api_info.meta.json  _array_like.data.json  _array_like.meta.json  _array_utils_impl.data.json  _array_utils_impl.meta.json  _arraypad_impl.data.json  _arraypad_impl.meta.json  _arraysetops_impl.data.json  (+4720 more)
configs/: integration_examples.yaml
content/: hp_deeper_insights.tsx  windows_live_messenger.html
core/: AvifImagePlugin.py  CFF2ToCFF.py  ETHOS.md  GifImagePlugin.py  IcnsImagePlugin.py  M_E_T_A_.py  MpoImagePlugin.py  QoiImagePlugin.py  README.md  S__i_l_f.py  UnitDbl.py  Untitled-1.py  WebPImagePlugin.py  __config__.py  __init__.py  _a_v_a_r.py  _add_newdocs.py  _affinity_propagation.py  _afm.py  _agglomerative.py  _arffread.py  _array_api_info.py  _array_like.py  _arraypad_impl.py  _arrayterator_impl.py  _arrow_string_mixins.py  _assets.py  _ast.py  _asyncio.py  _autogen.py  _autogen_fixtures.py  _available_if.py  _axes.py  _axis_nan_policy.py  _backend_gtk.py  _backend_pdf_ps.py  _backend_tk.py  _base.py  _basic.py  _basinhopping.py  (+1345 more)
core_modules/: BmpImagePlugin.py  Duration.py  E_B_L_C_.py  Image.py  ImageFile.py  ImageFont.py  ImageMorph.py  ImageText.py  JpegImagePlugin.py  O_S_2f_2.py  PngImagePlugin.py  README.md  T_S_I__1.py  TupleVariation.py  __init__.py  __main__.py  _add_newdocs_scalars.py  _aliases.py  _annotations.py  _arff_parser.py  (+1441 more)
misc/echoes/: __init__.py  pyproject.toml
misc/echoes/api/: Dockerfile  docker-compose.yml  requirements.txt  server.py  start_dev.py  start_prod.py
misc/echoes/core/: adaptive_fidelity.py  archer_framework.py  cost_optimizer.py  cross_channel_accuracy_enhancer.py  cross_channel_parser.py  historical_example_analysis.py  multi_sensor_fusion.py  multimodal_processor.py  rag_v2.py  unified_accuracy_improvement.py  unified_comprehension.py  unified_comprehension_integration.py
root_configs/: .coveragerc  .env.example  .env.template  .gitattributes  .gitignore  .gitmodules  .pypirc  Dockerfile  LICENSE_MediaScan  MANIFEST.in  deploy_production.sh  pyproject.toml  pytest.ini  tox.ini
(+2426 files in other folders)
