[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echoes"
version = "0.1.0"
description = "Enterprise multimodal AI assistant platform with consent-based licensing"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
authors = [
    {name = "Irfan Kabir", email = "irfankabir02@gmail.com"},
]
maintainers = [
    {name = "Irfan Kabir", email = "irfankabir02@gmail.com"},
]
keywords = ["ai", "assistant", "multimodal", "fastapi", "openai", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Core AI & API Layers
    "openai>=2.38.0,<3.0.0",
    "fastapi==0.136.3",
    "uvicorn==0.48.0",
    "httpx==0.28.1",
    "requests==2.34.2",
    "python-dotenv==1.2.2",

    # Security & Rate Limiting
    "slowapi==0.1.9",
    "pybreaker>=1.4.1",
    "tenacity>=8.2.3",
    "redis>=7.4.0",
    "pygments==2.20.0",
    "PyJWT>=2.13.0",


    # Data Science & ML
    "numpy>=1.24.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",

    # Async HTTP
    "aiohttp>=3.14.0",

    # Utilities
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "aiofiles>=25.1.0",
    "prometheus-client>=0.25.0",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.15",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "jsonschema>=4.26.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]
langchain = [
    # Only used by misc/Accounting scripts — not imported in production code.
    # Pinned to 0.3.x until langchain-classic migration is done.
    "langchain>=0.3.29,<1.0.0",
    "langchain-core>=0.3.51,<1.0.0",
    "langchain-community>=0.3.21,<0.4.0",
    "langchain-openai>=0.3.35,<0.4.0",
]

# UV dependency groups (align with GRID-main: uv sync --group dev --group test)
[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.4.0",
]
dev = [
    "ruff>=0.15.15",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "jsonschema>=4.26.0",
]
# Mistral Agents / Gridstral demos (`examples/gridstral_mistral_conversation_demo.py`)
mistral = [
    "mistralai>=2.4.5,<3",
]

[tool.uv]
default-groups = ["test", "dev"]

[project.urls]
Homepage = "https://github.com/caraxesthebloodwyrm02/echoes"
Repository = "https://github.com/caraxesthebloodwyrm02/echoes"
Issues = "https://github.com/caraxesthebloodwyrm02/echoes/issues"
Documentation = "https://echoes.readthedocs.io/"

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["misc", "scripts", "config", "docs", "logs", "tmp", "checkpoints", "migrations"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ASYNC", # flake8-async
    "S",    # flake8-bandit (security)
    "PERF", # perflint
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "S101", # Use of assert detected
    "S105", # Possible hardcoded password
    "S106", # Possible hardcoded password
    "S107", # Possible hardcoded password
]

[tool.ruff.lint.isort]
known-first-party = ["echoes", "app", "core", "core_modules", "integrations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011", "S110", "S113", "S311", "PERF401"]
"**/start_api.py" = ["S104", "S603", "PERF401"]
"**/verify_environment.py" = ["S603"]
"**/full_coverage_test_runner.py" = ["S113"]
"**/retry_utils.py" = ["ASYNC109"]
"**/glimpse_tools.py" = ["ASYNC109"]
"api/config.py" = ["S104"]
"app/**/*" = ["S110"]
"assistant_v2_core.py" = ["S110", "PERF401"]
"echoes/core/rag_v2.py" = ["S110"]
"glimpse/**/*" = ["S110", "S324", "S311", "S104", "PERF401", "PERF102", "ASYNC230", "ASYNC110"]
"src/rag_orbit/embeddings.py" = ["S311"]
"**/multimodal_resonance.py" = ["S324"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
no_implicit_reexport = true
strict_equality = true
strict_optional = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "openai.*",
    "fastapi.*",
    "uvicorn.*",
    "httpx.*",
    "slowapi.*",
    "pybreaker.*",
    "tenacity.*",
    "redis.*",
    "langchain.*",
    "langchain_core.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short --maxfail=10"
testpaths = ["tests"]
python_files = "test_*.py *_test.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
timeout = 30
timeout_method = "thread"
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "__pycache__", ".venv", "venv"]
markers = [
    "unit: Unit tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "asyncio: Async tests",
    "Glimpse: marks tests as Glimpse tests",
    "requires_openai: mark test as requiring OPENAI_API_KEY (skipped when missing)",
]

[tool.coverage.run]
source = ["app", "api", "glimpse", "tools", "core", "src", "integrations"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
    "*/misc/*",
    "*/examples/*",
    "*/demos/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
