[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echoes-ai"
version = "1.0.0"
description = "Echoes AI Multi-Agent System with Media Search and Workflow Automation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Echoes AI Team", email = "team@echoes.ai"},
]
maintainers = [
    {name = "Echoes AI Team", email = "team@echoes.ai"},
]
keywords = [
    "ai",
    "agents",
    "openai",
    "fastapi",
    "media-search",
    "workflow",
    "automation",
    "chatbot",
    "llm",
    "multimodal",
    "enterprise"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Office/Business",
    "Framework :: FastAPI"
]
dependencies = [
    # Core AI & API Layers
    "openai>=1.3.7",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.2",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",

    # Security & Rate Limiting
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pygments>=2.19.2",

    # Database & Storage
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.1",
    #"asyncpg>=0.29.0",  # Commented out due to Windows build issues
    "redis>=5.0.1",
    "aioredis>=2.0.1",

    # Data Processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tiktoken>=0.5.2",

    # Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "orjson>=3.9.10",
    "cryptography>=41.0.8",

    # Monitoring & Observability
    # Moved to optional extras under [project.optional-dependencies]. Not installed by default
    # to comply with "knock first / be transparent" egress and telemetry policy.

    # Additional Features
    "websockets>=12.0",
    "cachetools>=5.3.2",
    "strawberry-graphql>=0.215.1",
    "anthropic>=0.7.8",
    "duckduckgo-search>=6.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
    "build>=0.10.0",
    "twine>=4.0.0"
]
cluster = [
    "docker>=6.1.0",
    "docker-compose>=1.29.0"
]
monitoring = [
    "grafana-api>=1.0.3",
    "prometheus-client>=0.19.0",
    "jaeger-client>=4.8.0"
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]
all = [
    "echoes-ai[dev,cluster,monitoring,docs]"
]

[project.urls]
Homepage = "https://github.com/echoes-ai/echoes"
Documentation = "https://echoes-ai.readthedocs.io"
Repository = "https://github.com/echoes-ai/echoes"
"Bug Tracker" = "https://github.com/echoes-ai/echoes/issues"
Changelog = "https://github.com/echoes-ai/echoes/blob/main/CHANGELOG.md"

[project.scripts]
echoes = "echoes.cli:main"
echoes-server = "echoes.main:run_server"
echoes-cluster = "echoes.cluster:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["echoes*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
echoes = [
    "py.typed",
    "templates/**/*",
    "static/**/*",
    "config/*.yaml",
    "config/*.json"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
no_implicit_reexport = true
strict_equality = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short --maxfail=10"
testpaths = ["tests"]
python_files = "test_*.py *_test.py"
python_classes = "Test*"
python_functions = "test_*"
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "__pycache__", ".venv", "venv"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["echoes"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
