[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echoes-core"
version = "0.1.0"
authors = [
    { name = "caraxesthebloodwyrm02" }
]
description = "Modular AI orchestration system"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0.0"
]
